# Quartz

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  license.txt
docs/: CMakeLists.txt  doxyfile  mainpage.md
include/: quartz.hpp
include/quartz/: allocator.hpp  array.hpp  assert.hpp  atomic.hpp  atomic_operations.hpp  macros.hpp  types.hpp  utilities.hpp
source/: assert.cpp
tests/: CMakeLists.txt  test_allocator.cpp  test_array.cpp  test_assert.cpp  test_atomic.cpp  test_types.cpp
